2006-03-20  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-hal-mounts.c: (_hal_add_volume):
	Set GnomeVFSVolume's is_read_only property to the value of the HAL
	devices's "volume.is_mounted_read_only" property.

2006-03-20  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	Use MAX(source_block_size, target_block_size) as copy block size.
	
	* modules/sftp-method.c:
	Clean up read/write to correctly handle multiple outstanding blocks.
	Increase block_size by max_req times to get better transfer performance.

	Based on patch from Christian Neumair
	
2006-03-13  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post-release version bump

=== gnome-vfs 2.14.0 ===
	
2006-03-13  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Update version to 2.14.0

	* NEWS:
	Update for release

2006-03-04  David Zeuthen  <davidz@redhat.com>

	* configure.in: Remove build-time support for detecting
	gnome-mount. Add useful note to --with-hal-mount and friends that
	these parameters are not used if gnome-mount is detected

	* libgnomevfs/gnome-vfs-volume-ops.c: Detect gnome-mount and
	friends at run time instead of at build time

2006-03-03  Mikael Hallendal  <micke@imendio.com>

	* libgnomevfs/gnome-vfs-xfer.c:
	(xfer_open_source): Emit progress with phase opening source.
	(copy_file): Set file size, fixes issue where using recursive and the
	files in a sub directory has the file size of the directory.

2006-03-03  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c (_gnome_vfs_uri_resolve_all_symlinks_uri):
	Avoid crash when symlinks have : in them. (#323016)
	Patch from Christian Neumair

2006-03-02  David Zeuthen  <davidz@redhat.com>

	* configure.in: Require hal 0.5.7 for new crypto bits in
	libhal-storage 0.5.7

	* libgnomevfs/gnome-vfs-hal-mounts.c: Don't read settings from
	/system/storage and remove code that uses it. Also use new API
	available in libhal-storage 0.5.7 and later instead of relying on